# Home-Theater

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  check_downloads.py  pyproject.toml
backend/app/: config.py  db.py  logging_config.py  main.py  models.py  schemas.py
backend/app/api/: downloads.py  favorites.py  play.py  progress.py  settings_api.py  sites.py  videos.py
backend/app/services/: aggregator.py  downloader.py  health.py  parser.py  resolver.py  scheduler.py  source_client.py
docs/: lessons-learned.md
docs/superpowers/plans/: 2026-04-25-home-theater-mvp-scaffold.md  2026-04-25-home-theater-mvp.md  2026-04-26-downloads-closure-plan.md  2026-04-26-player-enhancement.md
docs/superpowers/specs/: 2026-04-26-content-experience-design.md  2026-04-26-downloads-closure-design.md  2026-04-26-player-enhancement-design.md  2026-04-26-system-robustness-design.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/ckplayer/: .gitkeep
frontend/src/: App.tsx  ckplayer.d.ts  main.tsx  router.tsx  types.ts
frontend/src/api/: client.ts  downloads.ts  favorites.ts  play.ts  progress.ts  settings.ts  sites.ts  videos.ts
frontend/src/components/: CategoryBar.tsx  CategorySettings.tsx  EpisodeList.tsx  FailedSourcesPanel.tsx  Layout.tsx  SourcePicker.tsx  VideoCard.tsx  VideoPlayer.tsx
frontend/src/pages/: Detail.tsx  Downloads.tsx  Favorites.tsx  Home.tsx  Player.tsx  Progress.tsx  Search.tsx  Settings.tsx
frontend/src/styles/: global.css
frontend/src/utils/: cache.ts  toast.ts
